# humanward-standard

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  FIRST_PUBLIC_ANNOUNCEMENT.md  LICENSE.md  PROJECT_HANDOFF_CHECKPOINT.md  PUBLIC_DECLARATION.md  PUBLIC_INPUT_STATUS.md  PUBLIC_RELEASE_HOLD.md  PUBLIC_RELEASE_STATUS.md  PUBLIC_REPO_CURRENT_HASHES_v1.txt  PUBLIC_REPO_DRAFT_HASHES_v1.txt  README.md  README_HUMANWARD_RADAR_PROTECTION_SECTION.md  README_HUMANWARD_TWO_PAGE_VISUAL_SECTION.md  README_HUMANWARD_V2_MANDATE_SECTION.md  STANDARD_OPERATING_CHECKS.md
prototypes/humanward-ai-mvp/: .gitignore  README.md  SHA256SUMS.txt  humanward_audit_chain.jsonl  humanward_review_queue.jsonl  humanward_reviewer_audit_chain.jsonl  humanward_reviewer_review_queue.jsonl  pyproject.toml
prototypes/humanward-ai-mvp/configs/: humanward_mandate.md
prototypes/humanward-ai-mvp/docs/: DEPLOYMENT_OPTIONS.md  HUMANWARD_ACTION_GATE_V0_2.md  HUMANWARD_AI_CREATION_PLAN_v1.md  HUMANWARD_DUTY_OF_CARE_EXTENSION_v1.md  HUMANWARD_FAILURE_TAXONOMY_v1.md  HUMANWARD_LOCAL_CONTROLLED_DEMO.md  HUMANWARD_PRODUCT_SPEC_v0_1.md  HUMANWARD_RED_TEAM_PROMPT_PACK_v1.md  HUMANWARD_RELIABLE_QA_v1.md  HUMANWARD_REVIEWER_RUNBOOK_v1.md  HUMANWARD_SIGNED_AUDIT_EXPORT_v1.md  HUMANWARD_STAGE_EVIDENCE_MANIFEST_TEMPLATE_v1.md  HUMANWARD_STANDARDS_EVALUATION_CROSSWALK_v1.md  HUMANWARD_STANDARDS_EVALUATION_CROSSWALK_v2.md  HUMANWARD_V1_7_REVIEWER_BRIEF.md
prototypes/humanward-ai-mvp/schemas/: action_decision.schema.json  action_request.schema.json
prototypes/humanward-ai-mvp/scripts/: install_and_test.ps1  (+6 more)
(+111 files in other folders)
