[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "humanward-ai-mvp"
version = "0.1.0"
description = "A controlled MVP scaffold for Humanward-governed AI action gating and audit logging."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
humanward-ai = "humanward_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
